implemented dashboard
